# document-data-entry

./: .gitignore  README.md  pyproject.toml
docs/: PRD_A.md  setup-macos.md  setup-windows.md
src/docreview/: __init__.py  cli.py
src/docreview/core/: __init__.py  enums.py  patch.py  schemas.py  template_loader.py
src/docreview/stages/: __init__.py  classify.py  extract.py  ingest.py  normalize.py  pipeline.py  render.py  validate.py
src/docreview/templates/: __init__.py  bank_statement.json  government_id.json  notice_of_assessment.json  paystub.json  t4.json
src/docreview/utils/: __init__.py  md_generator.py  openai_extract.py  openai_field_fill.py  pdf_extract.py  serialization.py
tests/: conftest.py  test_cli.py  test_field_fill.py  test_schemas.py  test_smoke.py  test_stages.py  test_templates.py
tests/fixtures/: paystub_sample.txt  unknown_sample.txt
