[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docreview"
version = "0.2.0"
description = "Deterministic automated document review pipeline engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Document Review Team" }]
dependencies = [
  "pydantic>=2.6.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
ocr = [
  "openai>=1.0.0",
]

[project.scripts]
docreview = "docreview.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/docreview"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
